--- a/projects/07/vm_translator/package.json
+++ b/projects/07/vm_translator/package.json
@@ -1,20 +1,23 @@
 {
-    "name": "assembler",
+    "name": "vm_translator",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "tsc --project=tsconfig.json",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsc --project tsconfig.build.json",
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^13.9.8",
+        "@types/jest": "^25.2.1",
+        "@types/yargs": "^15.0.4",
+        "jest": "^25.3.0",
+        "ts-jest": "^25.3.1",
         "typescript": "^3.8.3"
     },
     "dependencies": {
-        "@types/yargs": "^15.0.4",
         "yargs": "^15.3.1"
     }
 }
