--- a/projects/08/vm_translator/package.json
+++ b/projects/08/vm_translator/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc --project tsconfig.build.json",
-        "test": "jest"
+        "test": "jest",
+        "start": "node ./built/cli/cli.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +19,8 @@
         "typescript": "^3.8.3"
     },
     "dependencies": {
+        "@types/glob": "^7.1.3",
+        "glob": "^7.1.6",
         "yargs": "^15.3.1"
     }
 }
