--- a/projects/06/assembler/package.json
+++ b/projects/06/assembler/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc --project=tsconfig.json",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "CPUEmulator": "bash  ../../../tools/CPUEmulator.sh"
     },
     "author": "",
     "license": "ISC",
