--- a/projects/08/vm_translator/.vscode/launch.json
+++ b/projects/08/vm_translator/.vscode/launch.json
@@ -1,17 +1,14 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "type": "node",
             "request": "launch",
             "name": "Jest",
-            "program": "${workspaceFolder}/projects/08/vm_translator/node_modules/jest/bin/jest.js",
+            "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
             "args": [
                 "--config",
-                "${workspaceFolder}/projects/08/vm_translator/jest.config.js",
+                "jest.config.js",
                 "--runInBand",
                 "--coverage=false"
             ],
