--- a/projects/10/SyntaxAnalyser/package.json
+++ b/projects/10/SyntaxAnalyser/package.json
@@ -18,14 +18,16 @@
     "license": "ISC",
     "devDependencies": {
         "@types/jest": "^25.2.3",
-        "@types/node": "^13.9.8",
+        "@types/node": "^13.13.32",
         "@types/yargs": "^15.0.4",
         "jest": "^25.3.0",
         "ts-jest": "^25.3.1",
         "typescript": "^4.0.5"
     },
     "dependencies": {
+        "@types/event-stream": "^3.3.34",
         "@types/glob": "^7.1.3",
+        "event-stream": "^4.0.1",
         "glob": "^7.1.6",
         "xml": "^1.0.1",
         "yargs": "^15.3.1"
