--- a/projects/10/SyntaxAnalyser/package.json
+++ b/projects/10/SyntaxAnalyser/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "SyntaxAnalyser",
+    "name": "syntax-analyser",
     "version": "1.0.0",
     "description": "",
     "main": "built/index.js",
     "scripts": {
         "build": "tsc --project tsconfig.build.json",
         "test": "jest",
-        "start": "node ./built/cli/cli.js",
+        "start": "node ./built/index.js",
         "FibonacciElement": "node ./built/cli/cli.js --in ../FunctionCalls/FibonacciElement/**/*.vm --out ../FunctionCalls/FibonacciElement/FibonacciElement.asm",
         "SimpleFunction": "node ./built/cli/cli.js --in ../FunctionCalls/SimpleFunction/**/*.vm --out ../FunctionCalls/SimpleFunction/SimpleFunction.asm",
         "StaticsTest": "node ./built/cli/cli.js --in ../FunctionCalls/StaticsTest/**/*.vm --out ../FunctionCalls/StaticsTest/StaticsTest.asm",
@@ -20,13 +20,14 @@
         "@types/jest": "^25.2.3",
         "@types/node": "^13.13.32",
         "@types/yargs": "^15.0.4",
-        "jest": "^25.3.0",
-        "ts-jest": "^25.3.1",
+        "jest": "^26.6.3",
+        "ts-jest": "^26.4.4",
         "typescript": "^4.0.5"
     },
     "dependencies": {
         "@types/event-stream": "^3.3.34",
         "@types/glob": "^7.1.3",
+        "@types/xml": "^1.0.5",
         "event-stream": "^4.0.1",
         "glob": "^7.1.6",
         "xml": "^1.0.1",
